--- a/gb/19/9/27/n11549650.md
+++ b/gb/19/9/27/n11549650.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/luyub2587/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/luyub2587/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/luyub2587/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/luyub2587/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/luyub2587/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/luyub2587/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/luyub2587/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/luyub2587/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/luyub2587/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/luyub2587/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/luyub2587/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/luyub2587/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/luyub2587/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/luyub2587/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/luyub2587/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/luyub2587/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/luyub2587/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/luyub2587/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/luyub2587/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/luyub2587/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/luyub2587/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/luyub2587/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>达拉斯地区两城市入选全美最具活力城市</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2017/07/59a2891038cc527045fd25c7d6a9e9b5-320x200.jpg" />
+
 <h6></h6>
 <hr>
-	<p>【大纪元2019年09月27日讯】（大纪元记者唐仙仪编译报导）房地产新闻网站Point2 Homes近日的研究显示，<ahref="https://github.com/luyub2587/djy/blob/master/gb/tag/%E8%BE%BE%E6%8B%89%E6%96%AF.md#1">达拉斯</a>地区的大草原（Grand Prairie）市和沃斯堡市是全美十大最具活力的城市之一。这项研究调查了美国的150个城市，针对每个城市分别分析了四个主要类别因素：人力资本、教育和文化、经济活动和住房。最后以“城市在不断创新与发展”以及“从其它城市中脱颖而出”来确定最具活力的城市荣誉归属。</p>
-<p>大草原（Grand Prairie）市整体<ahref="https://github.com/luyub2587/djy/blob/master/gb/tag/%E6%8E%92%E5%90%8D.md#1">排名</a>第五位。报告称，该城市最值得注意的统计数据是，2013至2017年间生活在贫困线以下的人口数量下降了34%，是全美下降幅度最大的第13位。该城市还拥有全美最大的迁入新居民增幅（第2位），以及最多的公司数量（第8位），最大的国内生产总值增长（第18位）和最大的房屋价格升值（第11位）。该研究进一步按城市规模细分了排名，大草原市即成为全美最具活力的小城市。</p>
-<p>在它的西边，沃斯堡市总体<ahref="https://github.com/luyub2587/djy/blob/master/gb/tag/%E6%8E%92%E5%90%8D.md#1">排名</a>第七位，最突出的数据是其新公司数量激增了17%（在所有研究的城市中排名第五位）。此外，沃斯堡市在人口增长（排名第10）、就业增加（排名第13）、贫困人口减少（排名第16）和房价升值（排名第22）方面也表现优异。在沃斯堡所属的大城市类别，它的活力度排名第四。</p>
-<p>在<ahref="https://github.com/luyub2587/djy/blob/master/gb/tag/%E8%BE%BE%E6%8B%89%E6%96%AF.md#1">达拉斯</a>地区，这是一种趋势。越来越多的人和公司在迁往该地区。达拉斯市在最具活力城市总体排名中居第24位，在大城市类别中排名第10位，这里的GDP也在增长。</p>
+	<p>【大纪元2019年09月27日讯】（大纪元记者唐仙仪编译报导）房地产新闻网站Point2 Homes近日的研究显示，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%BE%BE%E6%8B%89%E6%96%AF.md#1">达拉斯</a>地区的大草原（Grand Prairie）市和沃斯堡市是全美十大最具活力的城市之一。这项研究调查了美国的150个城市，针对每个城市分别分析了四个主要类别因素：人力资本、教育和文化、经济活动和住房。最后以“城市在不断创新与发展”以及“从其它城市中脱颖而出”来确定最具活力的城市荣誉归属。</p>
+<p>大草原（Grand Prairie）市整体<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8E%92%E5%90%8D.md#1">排名</a>第五位。报告称，该城市最值得注意的统计数据是，2013至2017年间生活在贫困线以下的人口数量下降了34%，是全美下降幅度最大的第13位。该城市还拥有全美最大的迁入新居民增幅（第2位），以及最多的公司数量（第8位），最大的国内生产总值增长（第18位）和最大的房屋价格升值（第11位）。该研究进一步按城市规模细分了排名，大草原市即成为全美最具活力的小城市。</p>
+<p>在它的西边，沃斯堡市总体<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8E%92%E5%90%8D.md#1">排名</a>第七位，最突出的数据是其新公司数量激增了17%（在所有研究的城市中排名第五位）。此外，沃斯堡市在人口增长（排名第10）、就业增加（排名第13）、贫困人口减少（排名第16）和房价升值（排名第22）方面也表现优异。在沃斯堡所属的大城市类别，它的活力度排名第四。</p>
+<p>在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%BE%BE%E6%8B%89%E6%96%AF.md#1">达拉斯</a>地区，这是一种趋势。越来越多的人和公司在迁往该地区。达拉斯市在最具活力城市总体排名中居第24位，在大城市类别中排名第10位，这里的GDP也在增长。</p>
 <p>达拉斯地区不是德州唯一在这项研究中大放异彩的地区。德州首府奥斯汀是最具活力的城市第11位，大城市类别第六位。奥斯汀市在不断吸引着新的居民和公司，并且拥有不断增长的GDP。</p>
 <p>在全美范围内，最具活力的城市是旧金山。随后依次有西雅图、丹佛、科罗拉多州的奥罗拉市（Aurora）。</p>
 <p>责任编辑：李元</p>
@@ -17,36 +17,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/19/2/1/n11017042.md#1">达拉斯地区获评世界第十大最富有都市区</a></li>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/19/3/15/n11114678.md#1">达拉斯地区获评全美最热门就业市场第十位</a></li>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/19/3/22/n11131175.md#1">德州五城市获评生活工作最经济实惠城市</a></li>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/19/4/19/n11197286.md#1">达拉斯获评全美最多元化第五大城市</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/2/1/n11017042.md#1">达拉斯地区获评世界第十大最富有都市区</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/3/15/n11114678.md#1">达拉斯地区获评全美最热门就业市场第十位</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/3/22/n11131175.md#1">德州五城市获评生活工作最经济实惠城市</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/4/19/n11197286.md#1">达拉斯获评全美最多元化第五大城市</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/21/n11061288.md#1" target="_blank">林辉：毁黄帝炎帝陵 中共与中华民族水火不容</a></li><li><a href="https://github.com/luyub2587/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11489263.md#1" target="_blank">伦敦盛大游行 34国法轮功学员吁停止迫害</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/6/n9809482.md#1" target="_blank">吐斯廉博物馆告诉世界：柬埔寨发生过什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869347.md#1" target="_blank">感恩节 法轮大法弟子感念师恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/20/3/24/n11971400.md#1">最新翻墙软件 突破封锁访问大纪元新唐人</a></li>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/20/3/25/n11974512.md#1">【新闻看点】习将出席G20峰会 国际问责不断</a></li>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/20/3/25/n11972610.md#1">6万武汉人封城前外逃 路线与欧美疫情吻合？</a></li>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/20/3/25/n11972775.md#1">你中奖了吗？109年1-2月统一发票兑奖资讯</a></li>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/20/3/25/n11972094.md#1">捂不住了 大陆金融系统至少千人染中共病毒</a></li>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/20/3/25/n11973180.md#1">辛龙憔悴赴灵堂 瞒着女儿说：妈妈去旅行了</a></li>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/20/3/25/n11973870.md#1">辛龙灵堂伴妻5小时 双手合十离开未受访</a></li>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/20/3/24/n11969412.md#1">刘真灵堂预计25日开放 追思会下月举行</a></li>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/20/3/24/n11971575.md#1">宣传新片时自称亚裔 刘亦菲遭大陆网民骂翻</a></li>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/20/3/25/n11974278.md#1">与高圆圆携女抵上海 赵又廷复工前被强制隔离</a></li>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/20/3/22/n11962482.md#1">《推背图》第7象归序 谈庚子流年</a></li>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】上帝之鞭：欧洲黑死病</a></li>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/20/3/23/n11967225.md#1">成规模毁灭事件中的悬案 明朝王恭厂大爆炸</a></li>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/20/3/24/n11969439.md#1">中国古代的“飞天”舞蹈家</a></li>
-<li><a href="https://github.com/luyub2587/djy/blob/master/gb/20/3/24/n11970004.md#1">老僧从冥府归来 传信给行恶的官员们</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/luyub2587/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/luyub2587/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/27/n11549650.htm">达拉斯地区两城市入选全美最具活力城市</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/27/n11549650.htm">达拉斯地区两城市入选全美最具活力城市</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/luyub2587/djy/blob/master/gb/19/9/27/n11549650.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/luyub2587/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/luyub2587/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/luyub2587/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/luyub2587/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/luyub2587/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/9/27/n11549650.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
